# mojo-apps

./: .gitignore  .gn  BUILD.gn  MOJO_SDK_VERSION  README.md  change_buildfiles.py  run_app.sh
apptest/: BUILD.gn  example_apptest.cc  example_client_application.cc  example_client_impl.cc  example_client_impl.h  example_service_application.cc  example_service_application.h  example_service_impl.cc  example_service_impl.h
client_tools/: install-build-deps.sh  rev_sdk.py  set_up_mojo_gn_build.sh
client_tools/chromium_pull_changes/: add_landmine.patch  add_license.patch  add_mojo_base_include_dirs.patch  athena_deps.patch  change_download_mojo_shell.patch  change_gn.py  change_mojo_sdk_root_gni.patch  chrome_test.patch  content_public_browser.patch  download_shell_binary.patch  edk_js_test.patch  fix_checkdeps.patch  get_chrome_to_build.patch  get_content_to_build.patch  get_mojo_edk_tests_to_build_in_gyp.patch  get_mojo_to_build.patch  gypfile_changes_for_mojo_public_to_build.patch  gypfile_references_to_logging_files.patch  html_viewer.patch  make_chromium_pull_changes.sh  mojo_base_logging_files.patch  mojo_gni.patch  mojo_public_buildfiles.patch  mojo_services_public_gypfile.patch  mojom_bindings_generator_explicit.patch  nacl_ppapi_changes.patch  reorder_references_in_buildfiles.py  search_and_replace_changes.py
client_tools/consumable_edk/: change_gn.py  make_edk_consumable.sh  new_buildfiles.patch
client_tools/consumable_public_services/: add_missing_dependencies.patch  bindings_generation.patch  change_gn.py  fixup_mojom_gni_comments.patch  make_services_consumable.sh  mojo_gni.patch  mojo_gni_import_dirs.patch  mojom_import_dirs.patch  mojom_public_configs.patch  new_buildfiles.patch  presubmit_fixup.patch
client_tools/consumable_sdk/: add_missing_deps.patch  change_gn.py  make_sdk_consumable.sh  new_buildfiles.patch  python_buildfile.patch  rebase_list_example.patch
client_tools/move_services_in_chromium/: add_license.patch  fix_checkdeps.patch  fix_checkdeps_2.patch  make_owners_file_changes.patch  mojo_service_buildfiles.patch  mojo_services_public_config.patch  mojo_services_public_network.patch  move_services_in_chromium.py  move_services_in_chromium.sh  network_service_buildfile.patch  network_service_root.patch  reorder_references_in_buildfiles.py  search_and_replace_changes.py
echo/: BUILD.gn  echo_client.cc  echo_service.cc
examples/apptest/: BUILD.gn  example_apptest.cc
examples/echo/: BUILD.gn
examples/sample_app/: BUILD.gn  gles2_client_impl.h  sample_app.cc
tools/: rev_sdk.py  rev_sdk.sh
tools/consumable_public_services/: change_gn.py
tools/consumable_sdk/: bindings_generation.patch  change_gn.py  make_sdk_consumable.sh  new_buildfiles.patch
