# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/mojo/public/tools/bindings/mojom.gni")
import("//build/config/mojo.gni")

group("echo") {
  deps = [
    ":client",
    ":service"
  ]
}

shared_library("client") {
  output_name = "echo_client"

  deps = [
    ":bindings",
    "//third_party/mojo/public/c/system:for_shared_library",
    "//third_party/mojo/public/cpp/application:standalone",
    "//third_party/mojo/public/cpp/bindings",
    "//third_party/mojo/public/cpp/utility",
  ]

  sources = [ "echo_client.cc" ]
}

shared_library("service") {
  output_name = "echo_service"

  deps = [
    ":bindings",
    "//third_party/mojo/public/c/system:for_shared_library",
    "//third_party/mojo/public/cpp/application:standalone",
    "//third_party/mojo/public/cpp/bindings",
    "//third_party/mojo/public/cpp/utility",
  ]

  sources = [ "echo_service.cc" ]
}

mojom("bindings") {
  sources = [ "echo_service.mojom" ]
}
