# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/mojo.gni")
import(mojo_root + "mojo/public/tools/bindings/mojom.gni")

group("echo") {
  deps = [
    ":client",
    ":service"
  ]
}

shared_library("client") {
  output_name = "echo_client"

  deps = [
    ":bindings",
    mojo_root + "mojo/public/c/system:for_shared_library",
    mojo_root + "mojo/public/cpp/application:standalone",
    mojo_root + "mojo/public/cpp/bindings",
    mojo_root + "mojo/public/cpp/utility",
  ]

  sources = [ "echo_client.cc" ]
}

shared_library("service") {
  output_name = "echo_service"

  deps = [
    ":bindings",
    mojo_root + "mojo/public/c/system:for_shared_library",
    mojo_root + "mojo/public/cpp/application:standalone",
    mojo_root + "mojo/public/cpp/bindings",
    mojo_root + "mojo/public/cpp/utility",
  ]

  sources = [ "echo_service.cc" ]
}

mojom("bindings") {
  sources = [ "echo_service.mojom" ]
}
