# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

import(rebase_path("mojo/public/mojo_application.gni", ".", mojo_root))
import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))

group("echo") {
  deps = [
    ":client",
    ":service",
  ]
}

mojo_native_application("client") {
  output_name = "echo_client"

  deps = [
    ":bindings",
    rebase_path("mojo/public/cpp/application:standalone", ".", mojo_root),
    rebase_path("mojo/public/cpp/bindings", ".", mojo_root),
    rebase_path("mojo/public/cpp/utility", ".", mojo_root),
  ]

  sources = [
    "echo_client.cc",
  ]
}

mojo_native_application("service") {
  output_name = "echo_service"

  deps = [
    ":bindings",
    rebase_path("mojo/public/cpp/application:standalone", ".", mojo_root),
    rebase_path("mojo/public/cpp/bindings", ".", mojo_root),
    rebase_path("mojo/public/cpp/utility", ".", mojo_root),
  ]

  sources = [
    "echo_service.cc",
  ]
}

mojom("bindings") {
  sources = [
    "echo_service.mojom",
  ]
}
