# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

shared_library("sample_app") {
  sources = [
    "gles2_client_impl.cc",
    "gles2_client_impl.h",
    "sample_app.cc",
  ]

  deps = [
    ":spinning_cube",
    "//base",
    "//gpu/command_buffer/client:gles2_interface",
    rebase_path("mojo/public/c/system:for_shared_library", ".", mojo_root),
    rebase_path("mojo/public/cpp/application:standalone", ".", mojo_root),
    rebase_path("mojo/public/cpp/bindings", ".", mojo_root),
    rebase_path("mojo/public/cpp/utility", ".", mojo_root),
    rebase_path("mojo/public/gles2:for_shared_library", ".", mojo_root),
    rebase_path("services/public/interfaces/geometry", ".", mojo_root),
    rebase_path("services/public/interfaces/native_viewport", ".", mojo_root),
  ]
}

source_set("spinning_cube") {
  sources = [
    "spinning_cube.cc",
    "spinning_cube.h"
  ]

  deps = [
    "//base",
    rebase_path("mojo/public/gles2:for_shared_library", ".", mojo_root),
  ]
}
