# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/mojo.gni")

import(rebase_path("mojo/public/mojo_application.gni", ".", mojo_root))

mojo_native_application("sample_app") {
  sources = [
    "gles2_client_impl.cc",
    "gles2_client_impl.h",
    "sample_app.cc",
  ]

  deps = [
    ":spinning_cube",
    "//base",
    "//gpu/command_buffer/client:gles2_interface",
    rebase_path("mojo/public/c/gles2", ".", mojo_root),
    rebase_path("mojo/public/cpp/application:standalone", ".", mojo_root),
    rebase_path("mojo/public/cpp/bindings", ".", mojo_root),
    rebase_path("mojo/public/cpp/environment", ".", mojo_root),
    rebase_path("mojo/public/cpp/system", ".", mojo_root),
    rebase_path("mojo/public/cpp/utility", ".", mojo_root),
    rebase_path("services/public/interfaces/geometry", ".", mojo_services_root),
    rebase_path("services/public/interfaces/native_viewport", ".", mojo_services_root),
  ]
}

source_set("spinning_cube") {
  sources = [
    "spinning_cube.cc",
    "spinning_cube.h",
  ]

  deps = [
    "//base",
    rebase_path("mojo/public/c/gles2", ".", mojo_root),
  ]
}
